--- a/pom.xml
+++ b/pom.xml
@@ -10,56 +10,23 @@
     </parent>
 
     <groupId>com.quant</groupId>
-    <artifactId>quant</artifactId>
+    <artifactId>quant-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>quant</name>
-    <description>Quant service built with Spring Boot</description>
+    <packaging>pom</packaging>
+    <name>quant-parent</name>
+    <description>Quant multi-module parent</description>
+
+    <modules>
+        <module>quant-model</module>
+        <module>quant-persistence</module>
+        <module>quant-market</module>
+        <module>quant-factor</module>
+        <module>quant-backtest</module>
+        <module>quant-app</module>
+    </modules>
 
     <properties>
         <java.version>21</java.version>
+        <mybatis-plus.version>3.5.7</mybatis-plus.version>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 </project>
