--- a/quant-app/src/main/resources/application.yml
+++ b/quant-app/src/main/resources/application.yml
@@ -9,19 +9,19 @@ spring:
 server:
   port: ${APP_PORT:8080}
 
+arthas:
+  ip: ${ARTHAS_IP:0.0.0.0}
+  telnet-port: ${ARTHAS_TELNET_PORT:3679}
+  http-port: ${ARTHAS_HTTP_PORT:-1}
+  session-timeout: ${ARTHAS_SESSION_TIMEOUT:1800}
+  username: ${ARTHAS_USERNAME:arthas}
+  password: ${ARTHAS_PASSWORD}
+
 quant:
   akshare:
     base-url: ${AKSHARE_BASE_URL:http://localhost:18080}
     user-agent: ${AKSHARE_USER_AGENT:Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/144.0.0.0 Safari/537.36}
   sync:
-    stock-code:
-      base-url: ${XUEQIU_BASE_URL:https://xueqiu.com}
-      user-agent: ${XUEQIU_USER_AGENT:Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/144.0.0.0 Safari/537.36}
-      page-size: ${SYNC_STOCK_CODE_PAGE_SIZE:100}
-      max-pages: ${SYNC_STOCK_CODE_MAX_PAGES:200}
-      throttle-ms: ${SYNC_STOCK_CODE_THROTTLE_MS:500}
-      max-retries: ${SYNC_STOCK_CODE_MAX_RETRIES:3}
-      retry-backoff-ms: ${SYNC_STOCK_CODE_RETRY_BACKOFF_MS:1200}
     daily-quote:
       recent-months: ${SYNC_DAILY_QUOTE_RECENT_MONTHS:6}
       throttle-ms: ${SYNC_DAILY_QUOTE_THROTTLE_MS:300}
