--- a/compose.yml
+++ b/compose.yml
@@ -7,6 +7,9 @@ services:
     container_name: quant-app
     environment:
       APP_PORT: 8080
+      JAVA_TOOL_OPTIONS: -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005 -Djdk.attach.allowAttachSelf=true -XX:+EnableDynamicAgentLoading
+      ARTHAS_USERNAME: ${ARTHAS_USERNAME:-arthas}
+      ARTHAS_PASSWORD: ${ARTHAS_PASSWORD}
       DB_URL: jdbc:mysql://mysql:3306/quant?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
       DB_USERNAME: quant
       DB_PASSWORD: quant
@@ -18,6 +21,8 @@ services:
       no_proxy: localhost,127.0.0.1,aktools
     ports:
       - "8080:8080"
+      - "5005:5005"
+      - "3679:3679"
     depends_on:
       - aktools
       - mysql
